# argo-migration

./: .gitignore  CHANGELOG.md  COVERAGE.md  README.md  REBUILD_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/argo/: cron-backup.yaml  dag-diamond.yaml  loops-map.yaml  script-python.yaml  steps-hello.yaml
examples/prefect/: cron-backup_flow.py
src/argo2prefect/: __init__.py  __main__.py  assess.py  cli.py  deploy.py  expressions.py  generator.py  models.py  naming.py  parser.py  project.py  todos.py
tests/: conftest.py  corpus_baseline.json  corpus_utils.py  test_cli.py  test_corpus.py  test_end_to_end.py  test_expressions.py  test_generator.py  test_golden.py  test_parser.py  test_phase2_features.py  test_phase3_output.py  test_phase4_client.py  test_project.py  test_release.py  test_uv_run.py  update_corpus_baseline.py
tests/corpus/: README.md
tests/golden/: cron-backup_flow.py  dag-diamond_flow.py  loops-map_flow.py  script-python_flow.py  steps-hello_flow.py
